--- a/style.css
+++ b/style.css
@@ -1,9 +1,28 @@
+*{
+  box-sizing: border-box;
+}
+
 body{
   background-color: palevioletred;
   color: white;
+  font-family: "Comic Sans MS",sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 80vh;
+  margin: 0;
+  overflow: hidden;
 }
-
-
+h1{
+  margin: 50px 0 0;
+}
+.game-container {
+  position: relative;
+  padding: 50px;
+  margin: auto;
+  height: 350px;
+  width: 450px;
+}
 .figure-container {
   height: 250px;
   width: 200px;
@@ -15,4 +34,39 @@ body{
 
 .figure-part {
   display: none;
+}
+
+.wrong-letters-container{
+  position: absolute;
+  top: 50px;
+  right: 30px;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+}
+
+.wrong-letters-container p {
+  margin: 0 0 5px;
+}
+
+.wrong-letters-container span {
+  font-size: 30px;
+}
+
+.word {
+  display: flex;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.letter{
+  border-bottom: solid 5px pink;
+  display: inline-flex;
+  font-size: 30px;
+  align-items: center;
+  justify-content: center;
+  margin:  0 5px;
+  height: 50px;
+  width: 20px;
 }
